--- a/dest/index.html
+++ b/dest/index.html
@@ -19,7 +19,7 @@
     <meta name="distribution" content="web">
     <meta name="robots" content="noodp">
     <!-- TITLE-->
-    <title>ProjectName</title>
+    <title>The Giving Pool</title>
     <!-- FAVICON-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -43,7 +43,16 @@
     <!-- FOOTER :: START-->
     <footer class="footer" id="footer">
       <div class="c-grid">
-        <div class="footer__wrapper"></div>
+        <div class="footer__wrapper">
+          <h2 class="footer__title">The giving Pool</h2>
+          <ul class="footer__social">
+            <li><a href="#"><img src="img/discord.svg" alt=""></a></li>
+            <li><a href="#"><img src="img/telegram.svg" alt=""></a></li>
+            <li><a href="#"><img src="img/twitter.svg" alt=""></a></li>
+            <li><a href="#"><img src="img/instagram.png" srcset="img/instagram@2x.png 2x" alt=""></a></li>
+          </ul>
+          <p class="footer__copyright">copyright 2022 - thegivingpool.io</p>
+        </div>
       </div>
     </footer>
     <!-- FOOTER :: END-->
