--- a/dest/index.html
+++ b/dest/index.html
@@ -34,8 +34,30 @@
   <body>
     <!-- HEADER :: START-->
     <nav class="header" id="header">
-      <div class="c-grid">
-        <div class="header__wrapper"></div>
+      <div class="c-grid-fluid">
+        <div class="header__wrapper">
+          <div class="header__wrapper-left">
+            <div>
+              <div class="logo logo--header"><a class="logo__btn" href="#"><img src="img/logo.svg" alt=""></a></div>
+              <div class="c-btn__wrapper"><a class="c-btn" href="#"><span>THE GIVING pool</span></a></div>
+            </div>
+            <div>
+              <div class="hamburger hamburger--squeeze" role="button" hamburger-js="hamburger-js">
+                <div class="hamburger-box">
+                  <div class="hamburger-inner"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="header__wrapper-mobile" mobile-block-js>
+            <div class="header__wrapper-middle">
+              <mav class="header__nav"><a href="#">Roadmap</a><a href="#">WHITEPAPER</a><a href="#">Tokenomics</a></mav>
+            </div>
+            <div class="header__wrapper-right">
+              <div class="c-btn__wrapper"><a class="c-btn" href="#"><span>chart</span></a><a class="c-btn" href="#"><span>buy on pancake swap</span></a><a class="c-btn" href="#"><span>COnnect wallet</span></a></div>
+            </div>
+          </div>
+        </div>
       </div>
     </nav>
     <!-- HEADER :: END-->
@@ -59,6 +81,6 @@
   </body>
   <!-- SCRIPT :: START-->
   <!--script(src="js/vendor.js")-->
-  <!--script(src="js/app.js")-->
+  <script src="js/app.js"></script>
   <!-- SCRIPT :: END-->
 </html>
