--- a/dest/index.html
+++ b/dest/index.html
@@ -61,7 +61,51 @@
       </div>
     </nav>
     <!-- HEADER :: END-->
-    <main class="main p-home"></main>
+    <main class="main p-home">
+      <!-- SECTION :: START-->
+      <section class="token" id="token">
+        <div class="c-grid">
+          <div class="token__wrapper">
+            <div class="token__wrapper-left">
+              <h2 class="token__title">the giving Token: <span>$GIV</span></h2>
+              <div class="token__section">
+                <p>$GIV Token Address: 0x764cF690A710853B4ac02A3d48cb12c12eB18f4A</p>
+                <p>$GIV is created with a Tax structure that enables a constant flow of fundraising and rewards.</p>
+                <p>10% transaction fee – This fee gets split up and redistributed.</p>
+                <p>5% to be converted to ETH and fund to the Giving Pool</p>
+                <p>5% to be converted to USDT and distributed into the wallets of $GIV holders</p>
+                <p>A locked Giveaway wallet is created to earn rewards and host giveaways / airdrops throughout the community.</p>
+              </div>
+            </div>
+            <div class="token__wrapper-middle">
+              <div class="roadmap__block">
+                <h3 class="roadmap__block-title">Pool Candidates</h3>
+                <ul class="roadmap__box">
+                  <li>Candidate name (link to site) and description</li>
+                  <li>Candidate name (link to site) and description</li>
+                  <li>Candidate name (link to site) and description</li>
+                  <li>Candidate name (link to site) and description</li>
+                  <li>Candidate name (link to site) and description</li>
+                </ul>
+              </div>
+            </div>
+            <div class="token__wrapper-right">
+              <div class="roadmap__block">
+                <h3 class="roadmap__block-title">Trending on GIV</h3>
+                <ul class="roadmap__box">
+                  <li>Article name and description:</li>
+                  <li>Article name and description:</li>
+                  <li>Article name and description:</li>
+                  <li>Article name and description:</li>
+                  <li>Article name and description:</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- SECTION :: END-->
+    </main>
     <!-- FOOTER :: START-->
     <footer class="footer" id="footer">
       <div class="c-grid">
