Home page :::  - created donations section;

--- a/dest/index.html
+++ b/dest/index.html
@@ -105,6 +105,35 @@
         </div>
       </section>
       <!-- SECTION :: END-->
+      <!-- SECTION :: START-->
+      <section class="donations" id="donations">
+        <div class="c-grid">
+          <div class="donations__wrapper">
+            <div class="roadmap__block">
+              <h3 class="roadmap__block-title">Previous donations</h3>
+              <ul class="roadmap__box">
+                <li>
+                  <p>pool date: <span>december 20th, 2021</span> | pool size: <span>10 eth</span></p>
+                  <p>recipient: <span>charity Name</span></p>
+                </li>
+                <li>
+                  <p>pool date: <span>december 20th, 2021</span> | pool size: <span>10 eth</span></p>
+                  <p>recipient: <span>charity Name</span></p>
+                </li>
+                <li>
+                  <p>pool date: <span>december 20th, 2021</span> | pool size: <span>10 eth</span></p>
+                  <p>recipient: <span>charity Name</span></p>
+                </li>
+                <li>
+                  <p>pool date: <span>december 20th, 2021</span> | pool size: <span>10 eth</span></p>
+                  <p>recipient: <span>charity Name</span></p>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- SECTION :: END-->
     </main>
     <!-- FOOTER :: START-->
     <footer class="footer" id="footer">
