--- a/dest/roadmap-1.html
+++ b/dest/roadmap-1.html
@@ -38,7 +38,7 @@
         <div class="header__wrapper">
           <div class="header__wrapper-left">
             <div>
-              <div class="logo logo--header"><a class="logo__btn" href="#"><img src="img/logo.svg" alt=""></a></div>
+              <div class="logo logo--header"><a class="logo__btn" href="/index.html"><img src="img/logo.svg" alt=""></a></div>
               <div class="c-btn__wrapper"><a class="c-btn" href="#"><span>THE GIVING pool</span></a></div>
             </div>
             <div>
@@ -54,7 +54,7 @@
               <mav class="header__nav"><a class="is-active" href="/roadmap-1.html">Roadmap</a><a href="/whitepaper.html">WHITEPAPER</a><a href="/tokenomics.html">Tokenomics</a></mav>
             </div>
             <div class="header__wrapper-right">
-              <div class="c-btn__wrapper"><a class="c-btn" href="#"><span>chart</span></a><a class="c-btn" href="#"><span>buy on pancake swap</span></a><a class="c-btn" href="#"><span>COnnect wallet</span></a></div>
+              <div class="c-btn__wrapper"><a class="c-btn" href="#"><span>chart</span></a><a class="c-btn" href="#"><span>buy on uniswap</span></a><a class="c-btn" href="#"><span>COnnect wallet</span></a></div>
             </div>
           </div>
         </div>
@@ -89,6 +89,8 @@
               <li><span>launch sale #8-10</span></li>
               <li>begin future developments</li>
             </ul>
+            <p class="milestone__desc">for details on giv’s inital sales:</p>
+            <p class="milestone__desc"><span>keep reading</span></p>
             <h3 class="milestone__title">inital token deployment</h3>
             <p class="milestone__desc">The giving platform will be hosting ten (10) initial launches of 125,000,000 Giv tokens. these tokens are to be the circulating supply for giv.</p>
             <p class="milestone__desc">By periodically raising funds from our limited sales, we will be able to:</p>
@@ -97,7 +99,10 @@
               <li>implement a road for growth in both community and value.</li>
               <li>deploy proper marketing</li>
             </ul>
-            <p class="milestone__desc">detailed in the chart below, you will find the overview for each launch</p><img src="img/img-milestone-1.png" srcset="img/img-milestone-1@2x.png 2x" alt="">
+            <p class="milestone__desc">detailed in the chart below, you will find the overview for each launch</p>
+            <div class="milestone__table-scroll-wrapper">
+              <div class="milestone__table-scroll"><img class="milestone__table" src="img/img-milestone-1.png" srcset="img/img-milestone-1@2x.png 2x" alt=""></div>
+            </div>
             <p class="milestone__desc">The private sale for each period will run until the lot of GIV is fully sold or until each Limited Sale is closed.</p>
             <p class="milestone__desc">For any tokens that remain unsold, they will be allocated to the company and/or team for future fundraising.</p>
             <p class="milestone__desc">INITIAL LAUNCHED tokens are extremely limited  are available to select DATES/TIMES.</p>
