--- a/dest/tokenomics.html
+++ b/dest/tokenomics.html
@@ -38,7 +38,7 @@
         <div class="header__wrapper">
           <div class="header__wrapper-left">
             <div>
-              <div class="logo logo--header"><a class="logo__btn" href="#"><img src="img/logo.svg" alt=""></a></div>
+              <div class="logo logo--header"><a class="logo__btn" href="/index.html"><img src="img/logo.svg" alt=""></a></div>
               <div class="c-btn__wrapper"><a class="c-btn" href="#"><span>THE GIVING pool</span></a></div>
             </div>
             <div>
@@ -54,7 +54,7 @@
               <mav class="header__nav"><a href="/roadmap-1.html">Roadmap</a><a href="/whitepaper.html">WHITEPAPER</a><a class="is-active" href="/tokenomics.html">Tokenomics</a></mav>
             </div>
             <div class="header__wrapper-right">
-              <div class="c-btn__wrapper"><a class="c-btn" href="#"><span>chart</span></a><a class="c-btn" href="#"><span>buy on pancake swap</span></a><a class="c-btn" href="#"><span>COnnect wallet</span></a></div>
+              <div class="c-btn__wrapper"><a class="c-btn" href="#"><span>chart</span></a><a class="c-btn" href="#"><span>buy on uniswap</span></a><a class="c-btn" href="#"><span>COnnect wallet</span></a></div>
             </div>
           </div>
         </div>
@@ -80,10 +80,12 @@
             <p class="tokenomics__desc">90% is put into our liquidity Pool, creating the value of GIV.</p><img src="img/img-tokenomics-1.png" srcset="img/img-tokenomics-1@2x.png 2x" alt="">
             <h3 class="tokenomics__title">Token Distribution</h3>
             <p class="tokenomics__desc">The Giving Foundation will create 250,000,000 GIV tokens (250 million.)</p>
-            <p class="tokenomics__desc">125,000,000 Giv tokens put into giv’s liquidity pool that represents our circulating supply</p>
-            <p class="tokenomics__desc">50,000,000 (50M) Giv Tokens Locked in a seperate wallet designed to collect token rewards to fund community giveaways</p>
-            <p class="tokenomics__desc">50,000,000 (50M) Giv Tokens in the wallets of Developers to keep the operation of the giving platform running, Preform dApp updates & add new features.</p>
-            <p class="tokenomics__desc">25,000,000 (25M) Giv tokens in a reserve wallet for future announcements</p><img src="img/img-tokenomics-2.png" srcset="img/img-tokenomics-2@2x.png 2x" alt="">
+            <ul class="tokenomics__list">
+              <li>125,000,000 Giv tokens put into giv’s liquidity pool that represents our circulating supply</li>
+              <li>50,000,000 (50M) Giv Tokens Locked in a seperate wallet designed to collect token rewards to fund community giveaways</li>
+              <li>50,000,000 (50M) Giv Tokens in the wallets of Developers to keep the operation of the giving platform running, Preform dApp updates & add new features.</li>
+              <li>25,000,000 (25M) Giv tokens in a reserve wallet for future announcements</li>
+            </ul><img src="img/img-tokenomics-2.png" srcset="img/img-tokenomics-2@2x.png 2x" alt="">
             <h3 class="tokenomics__title">Token Sale</h3>
             <p class="tokenomics__desc">GIV shall only be made available for purchase through its token sale or on the secondary exchange market. No other tokens will be minted or available for purchase from GIV. There will be a total supply of 250,000,000 GIV Tokens with 125,000,000 GIV Tokens in circulation</p>
             <p class="tokenomics__desc">Our goal is to drive token value appreciation for early token buyers by significantly discounting tokes sold in each pre-sale round. The price will incrementally increase with each sale round, and each round is concluded when the allotment of tokens allocated for that round has been exhausted.</p>
