--- a/dest/whitepaper.html
+++ b/dest/whitepaper.html
@@ -38,7 +38,7 @@
         <div class="header__wrapper">
           <div class="header__wrapper-left">
             <div>
-              <div class="logo logo--header"><a class="logo__btn" href="#"><img src="img/logo.svg" alt=""></a></div>
+              <div class="logo logo--header"><a class="logo__btn" href="/index.html"><img src="img/logo.svg" alt=""></a></div>
               <div class="c-btn__wrapper"><a class="c-btn" href="#"><span>THE GIVING pool</span></a></div>
             </div>
             <div>
@@ -54,7 +54,7 @@
               <mav class="header__nav"><a href="/roadmap-1.html">Roadmap</a><a class="is-active" href="/whitepaper.html">WHITEPAPER</a><a href="/tokenomics.html">Tokenomics</a></mav>
             </div>
             <div class="header__wrapper-right">
-              <div class="c-btn__wrapper"><a class="c-btn" href="#"><span>chart</span></a><a class="c-btn" href="#"><span>buy on pancake swap</span></a><a class="c-btn" href="#"><span>COnnect wallet</span></a></div>
+              <div class="c-btn__wrapper"><a class="c-btn" href="#"><span>chart</span></a><a class="c-btn" href="#"><span>buy on uniswap</span></a><a class="c-btn" href="#"><span>COnnect wallet</span></a></div>
             </div>
           </div>
         </div>
