Tokenomics page :::  - re-do;

--- a/dest/roadmap.html
+++ b/dest/roadmap.html
@@ -39,7 +39,7 @@
         <div class="header__wrapper">
           <div class="header__wrapper-left">
             <div>
-              <div class="logo logo--header"><a class="logo__btn" href="/index.html"><img src="img/logo.svg" alt=""></a></div>
+              <div class="logo logo--header"><a class="logo__btn" href="/index.html"><img src="img/logo.png" srcset="img/logo@2x.png 2x" alt=""></a></div>
               <div class="c-btn__wrapper"><a class="c-btn" href="#"><span>THE GIVING pool</span></a></div>
             </div>
             <div>
@@ -55,7 +55,7 @@
               <mav class="header__nav"><a href="/roadmap-1.html">Roadmap</a><a href="/whitepaper.html">WHITEPAPER</a><a href="/tokenomics.html">Tokenomics</a></mav>
             </div>
             <div class="header__wrapper-right">
-              <div class="c-btn__wrapper"><a class="c-btn" href="#"><span>chart</span></a><a class="c-btn" href="#"><span>buy on uniswap</span></a><a class="c-btn" href="#"><span>COnnect wallet</span></a></div>
+              <div class="c-btn__wrapper"><a class="c-btn" href="#"><span>chart</span></a><a class="c-btn" href="#"><span>buy now</span></a><a class="c-btn" href="#"><span>Connect wallet</span></a></div>
             </div>
           </div>
         </div>
@@ -116,9 +116,6 @@
       </div>
     </footer>
     <!-- FOOTER :: END-->
-    <div class="c-modal mfp-hide mfp-with-anim" id="welcomeModal">
-          <div class="c-modal__body"><a href="#" popup-close-js>Continue to website</a></div>
-    </div><a href="#welcomeModal" data-effect="mfp-zoom-in" popup-js></a>
   </body>
   <!-- SCRIPT :: START-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
