--- a/dest/index.html
+++ b/dest/index.html
@@ -66,154 +66,21 @@
       <!-- SECTION :: START-->
       <section class="platform" id="platform">
         <div class="c-grid">
-          <div class="platform__wrapper">
-            <div class="platform__wrapper-left">
-              <h1 class="platform__title">the giving platform</h1>
-              <div class="platform__section">
-                <p>The Giving Pool raises funding for  worthy and charitable foundations - handpicked by $GIV holders.</p>
-                <p>$GIV holders can connect their wallets to verify ownership of the $GIV Token. Token holders can participate in the “Pools” voting tally. When the pools “Target Value” is reached, the highest nominated will receive a donation of the pools balance.</p>
-                <p>Alongside participating in the voting tally, The $GIV Token rewards holders with USDT and enters them in a chance for giveaways.</p>
-                <p>Learn more about The GIV Platform and participate in the: Donation, Reward & Giveaway aspects – on our Discord & Social Media.</p>
-              </div>
-              <ul class="footer__social">
-                <li><a href="#"><img src="img/discord.svg" alt=""></a></li>
-                <li><a href="#"><img src="img/telegram.svg" alt=""></a></li>
-                <li><a href="#"><img src="img/twitter.svg" alt=""></a></li>
-                <li><a href="#"><img src="img/instagram.png" srcset="img/instagram@2x.png 2x" alt=""></a></li>
-              </ul>
-            </div>
-            <div class="platform__wrapper-right">
-              <div class="roadmap__block">
-                <h1 class="roadmap__block-title">The Giving <br>Pool</h1>
-                <div class="platform__box">
-                  <div>
-                    <ul class="platform__list">
-                      <li>
-                        <div>
-                          <p>Target Value:</p><span>10 ETH</span>
-                        </div>
-                      </li>
-                      <li>
-                        <div>
-                          <p>Remaining:</p><span>5 ETH</span>
-                        </div>
-                      </li>
-                      <li>
-                        <div>
-                          <p>CURRENT VALUE:</p><span>5 ETH</span>
-                        </div>
-                      </li>
-                    </ul>
-                  </div>
-                  <div><img src="img/img-platform.png" srcset="img/img-platform@2x.png" alt="">
-                    <p class="platform__box-name">Pool #001</p>
-                  </div>
-                </div>
-                <div class="platform__table-wrapper">
-                  <p class="platform__table-title">Tally Candidates</p>
-                  <div class="platform__table">
-                    <div>
-                      <div>
-                        <p>Charity <br>name</p><span>8,965</span>
-                      </div>
-                    </div>
-                    <div>
-                      <div>
-                        <p>Charity <br>name</p><span>12,582</span>
-                      </div>
-                    </div>
-                    <div>
-                      <div>
-                        <p>Charity <br>name</p><span>3,327</span>
-                      </div>
-                    </div>
-                    <div>
-                      <div>
-                        <p>Charity <br>name</p><span><i>8,965</i></span>
-                      </div>
-                    </div>
-                    <div>
-                      <div>
-                        <p>Charity <br>name</p><span>6,174</span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+          <div class="platform__wrapper"></div>
         </div>
       </section>
       <!-- SECTION :: END-->
       <!-- SECTION :: START-->
       <section class="token" id="token">
         <div class="c-grid">
-          <div class="token__wrapper">
-            <div class="token__wrapper-left">
-              <h2 class="token__title">the giving Token: <span>$GIV</span></h2>
-              <div class="token__section">
-                <p>$GIV Token Address: 0x764cF690A710853B4ac02A3d48cb12c12eB18f4A</p>
-                <p>$GIV is created with a Tax structure that enables a constant flow of fundraising and rewards.</p>
-                <p>10% transaction fee – This fee gets split up and redistributed.</p>
-                <p>5% to be converted to ETH and fund to the Giving Pool</p>
-                <p>5% to be converted to USDT and distributed into the wallets of $GIV holders</p>
-                <p>A locked Giveaway wallet is created to earn rewards and host giveaways / airdrops throughout the community.</p>
-              </div>
-            </div>
-            <div class="token__wrapper-middle">
-              <div class="roadmap__block">
-                <h3 class="roadmap__block-title">Pool Candidates</h3>
-                <ul class="roadmap__box">
-                  <li>Candidate name (link to site) and description</li>
-                  <li>Candidate name (link to site) and description</li>
-                  <li>Candidate name (link to site) and description</li>
-                  <li>Candidate name (link to site) and description</li>
-                  <li>Candidate name (link to site) and description</li>
-                </ul>
-              </div>
-            </div>
-            <div class="token__wrapper-right">
-              <div class="roadmap__block">
-                <h3 class="roadmap__block-title">Trending on GIV</h3>
-                <ul class="roadmap__box">
-                  <li>Article name and description:</li>
-                  <li>Article name and description:</li>
-                  <li>Article name and description:</li>
-                  <li>Article name and description:</li>
-                  <li>Article name and description:</li>
-                </ul>
-              </div>
-            </div>
-          </div>
+          <div class="token__wrapper"></div>
         </div>
       </section>
       <!-- SECTION :: END-->
       <!-- SECTION :: START-->
       <section class="donations" id="donations">
         <div class="c-grid">
-          <div class="donations__wrapper">
-            <div class="roadmap__block">
-              <h3 class="roadmap__block-title">Previous donations</h3>
-              <ul class="roadmap__box">
-                <li>
-                  <p>pool date: <span>december 20th, 2021</span> | pool size: <span>10 eth</span></p>
-                  <p>recipient: <span>charity Name</span></p>
-                </li>
-                <li>
-                  <p>pool date: <span>december 20th, 2021</span> | pool size: <span>10 eth</span></p>
-                  <p>recipient: <span>charity Name</span></p>
-                </li>
-                <li>
-                  <p>pool date: <span>december 20th, 2021</span> | pool size: <span>10 eth</span></p>
-                  <p>recipient: <span>charity Name</span></p>
-                </li>
-                <li>
-                  <p>pool date: <span>december 20th, 2021</span> | pool size: <span>10 eth</span></p>
-                  <p>recipient: <span>charity Name</span></p>
-                </li>
-              </ul>
-            </div>
-          </div>
+          <div class="donations__wrapper"></div>
         </div>
       </section>
       <!-- SECTION :: END-->
