Landing pages :::  - created PP;

--- a/dest/landing.html
+++ b/dest/landing.html
@@ -19,7 +19,7 @@
     <meta name="distribution" content="web">
     <meta name="robots" content="noodp">
     <!-- TITLE-->
-    <title>The Giving Pool</title>
+    <title>The Giving Pool | Landing</title>
     <!-- FAVICON-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
@@ -62,7 +62,68 @@
       </div>
     </nav>
     <!-- HEADER :: END-->
-    <main class="main p-homepage"></main>
+    <main class="main p-landing">
+      <!-- SECTION :: START-->
+      <section class="landing" id="landing">
+        <div class="c-grid">
+          <div class="landing__container">
+            <div class="landing__wrapper landing__wrapper-1">
+              <div class="landing__row">
+                <div class="landing__col landing__col-1">
+                  <ul class="footer__social">
+                    <li><a href="#"><img src="img/discord.svg" alt=""></a></li>
+                    <li><a href="#"><img src="img/telegram.svg" alt=""></a></li>
+                    <li><a href="#"><img src="img/twitter.svg" alt=""></a></li>
+                    <li><a href="#"><img src="img/instagram.png" srcset="img/instagram@2x.png 2x" alt=""></a></li>
+                  </ul>
+                </div>
+                <div class="landing__col landing__col-2">
+                  <div class="logo logo--landing"><a class="logo__btn" href="#"><img src="img/logo-landing.png" srcset="img/logo-landing@2x.png 2x" alt=""></a></div>
+                </div>
+                <div class="landing__col landing__col-3"></div>
+              </div>
+              <div class="landing__timer-wrapper">
+                <p class="landing__timer-title">NEXT LAUNCH:</p>
+                <div class="landing__timer">
+                  <div class="container-countdown">
+                    <section class="countdown-block"><span class="days time-element">
+                        <u></u><span class="top">00</span><span class="top-back"><span>00</span></span><span class="bottom">00</span><span class="bottom-back"><span>00</span></span></span>
+                      <h2 class="subtitle">Days</h2>
+                    </section>
+                    <section class="countdown-block"><span class="hours time-element">
+                        <u></u><span class="top">00</span><span class="top-back"><span>00</span></span><span class="bottom">00</span><span class="bottom-back"><span>00</span></span></span>
+                      <h2 class="subtitle">Hours</h2>
+                    </section>
+                    <section class="countdown-block"><span class="minutes time-element">
+                        <u></u><span class="top">00</span><span class="top-back"><span>00</span></span><span class="bottom">00</span><span class="bottom-back"><span>00</span></span></span>
+                      <h2 class="subtitle">Minutes</h2>
+                    </section>
+                    <section class="countdown-block"><span class="seconds time-element">
+                        <u></u><span class="top">00</span><span class="top-back"><span>00</span></span><span class="bottom">00</span><span class="bottom-back"><span>00</span></span></span>
+                      <h2 class="subtitle">Seconds</h2>
+                    </section>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="landing__wrapper landing__wrapper-2">
+              <p class="landing__heading">LEARN MORE BY READING OUR: WHITEPAPER - ROADMAP - TOKENOMICS</p>
+              <p class="landing__desc">The giving platform will be hosting ten (10) initial launches of 125,000,000 Giv tokens. <br>these tokens are to be the circulating supply for giv.</p>
+              <p class="landing__desc">The private sale for each period will run until the lot of GIV is fully sold or until each Limited Sale is closed.</p>
+            </div>
+            <div class="landing__wrapper landing__wrapper-3">
+              <div class="milestone__table-scroll-wrapper">
+                <div class="milestone__table-scroll"><img class="milestone__table" src="img/img-milestone-1.png" srcset="img/img-milestone-1@2x.png 2x" alt=""></div>
+              </div>
+            </div>
+            <div class="landing__wrapper landing__wrapper-4">
+              <p class="landing__subtitle">Join our community today for more insights!</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- SECTION :: END-->
+    </main>
     <!-- FOOTER :: START-->
     <footer class="footer" id="footer">
       <div class="c-grid">
