--- a/dest/roadmap.html
+++ b/dest/roadmap.html
@@ -22,8 +22,8 @@
     <title>The Giving Pool | Roadmap</title>
     <!-- FAVICON-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100;200;300;400;500;600;700;800;900&amp;family=Poppins:wght@100;200;300;400;500;600;700;800;900&amp;display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100;200;300;400;500;600;700;800;900&amp;family=Poppins:wght@100;200;300;400;500;600;700;800;900&amp;family=Share+Tech&amp;display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" integrity="sha512-NmLkDIU1C/C88wi324HBc+S2kLhi08PN5GDeUVVVC/BVt/9Izdsc9SVeVfA1UZbY3sHUlDSyRXhCzHfr6hmPPw==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css" integrity="sha512-+EoPw+Fiwh6eSeRK7zwIKG2MA8i3rV/DGa3tdttQGgWyatG/SkncT53KHQaS5Jh9MNOT3dmFL0FjTY08And/Cw==" crossorigin="anonymous" referrerpolicy="no-referrer">
@@ -52,7 +52,7 @@
           </div>
           <div class="header__wrapper-mobile" mobile-block-js>
             <div class="header__wrapper-middle">
-              <mav class="header__nav"><a href="/roadmap-1.html">Roadmap</a><a href="/whitepaper.html">WHITEPAPER</a><a href="/tokenomics.html">Tokenomics</a></mav>
+              <mav class="header__nav"><a class="is-active" href="/roadmap-1.html">Roadmap</a><a href="/whitepaper.html">WHITEPAPER</a><a href="/tokenomics.html">Tokenomics</a></mav>
             </div>
             <div class="header__wrapper-right">
               <div class="c-btn__wrapper"><a class="c-btn" href="#"><span>chart</span></a><a class="c-btn" href="#"><span>buy now</span></a><a class="c-btn" href="#"><span>Connect wallet</span></a></div>
@@ -62,39 +62,71 @@
       </div>
     </nav>
     <!-- HEADER :: END-->
-    <main class="main p-home">
+    <main class="main p-roadmap">
       <!-- SECTION :: START-->
-      <section class="roadmap" id="roadmap">
+      <section class="milestone" id="milestone">
         <div class="c-grid">
-          <div class="roadmap__wrapper">
-            <h2 class="roadmap__title">Roadmap</h2>
-            <div class="roadmap__block">
-              <h3 class="roadmap__block-title">STAGE 1</h3>
-              <ul class="roadmap__box">
-                <li>Deploy $GIV token’s Smart contract and dApp development</li>
-                <li>Begin marketing</li>
-                <li>Create Partnerships with charities for giv’s first pool</li>
-                <li>Launch Pre-sale #1</li>
-              </ul>
+          <h2 class="milestone__title">roadmap</h2>
+          <div class="milestone__wrapper">
+            <h3 class="milestone__title">Milestones</h3>
+            <ul class="milestone__list">
+              <li>Deploy $GIV token’s Smart contract and dApp development</li>
+              <li>begin marketing</li>
+              <li>Begin Hosting discord and Telegram discussions / polls</li>
+              <li>Create partnerships with charities for giv’s first pool</li>
+              <li><span>Launch sale #1</span></li>
+              <li>launch 1st ever Giving pool via www.thegivingpool.io</li>
+              <li>distribute USDT rewards to holders a week after completion of 1st sale</li>
+              <li>deploy a structure for the Giving pool</li>
+              <li>find more charities to bring into the giving platform</li>
+              <li><span>Launch sale #2</span></li>
+              <li>begin hosting Q&A meets with local charities on discord</li>
+              <li><span>launch sale #3</span></li>
+              <li>Host Giveaways to token holders and community members</li>
+              <li>increase Value of the giving pool’s target to increase donations</li>
+              <li><span>launch sale #4-7</span></li>
+              <li>sponsor charities</li>
+              <li>develop the flow of operability for the giving platform</li>
+              <li><span>launch sale #8-10</span></li>
+              <li>begin future developments</li>
+            </ul>
+            <p class="milestone__desc">for details on giv’s inital sales:</p>
+            <p class="milestone__desc"><span>keep reading</span></p>
+            <h3 class="milestone__title">inital token deployment</h3>
+            <p class="milestone__desc">The giving platform will be hosting ten (10) initial launches of 125,000,000 Giv tokens. these tokens are to be the circulating supply for giv.</p>
+            <p class="milestone__desc">By periodically raising funds from our limited sales, we will be able to:</p>
+            <ul class="milestone__list">
+              <li>better control the value of giv</li>
+              <li>implement a road for growth in both community and value.</li>
+              <li>deploy proper marketing</li>
+            </ul>
+            <p class="milestone__desc">detailed in the chart below, you will find the overview for each launch</p>
+            <div class="milestone__table-scroll-wrapper">
+              <div class="milestone__table-scroll"><img class="milestone__table" src="img/img-milestone-1.png" srcset="img/img-milestone-1@2x.png 2x" alt=""></div>
             </div>
-            <div class="roadmap__block">
-              <h3 class="roadmap__block-title">Stage 2</h3>
-              <ul class="roadmap__box">
-                <li>Begin Hosting discord and Telegegram discussions / polls</li>
-                <li>Launch Pre-sale #2</li>
-                <li>Start the first “giving pool”</li>
-                <li>Launch Pre-sale #3</li>
-              </ul>
-            </div>
-            <div class="roadmap__block">
-              <h3 class="roadmap__block-title">Stage 3</h3>
-              <ul class="roadmap__box">
-                <li>Create community to actively seek and share charities for the pool</li>
-                <li>Begin Pre-sale #4</li>
-                <li>host Q&A meets with local charities</li>
-                <li>Launch $GIV Public Sale</li>
-              </ul>
-            </div>
+            <p class="milestone__desc">The private sale for each period will run until the lot of GIV is fully sold or until each Limited Sale is closed.</p>
+            <p class="milestone__desc">For any tokens that remain unsold, they will be allocated to the company and/or team for future fundraising.</p>
+            <p class="milestone__desc">INITIAL LAUNCHED tokens are extremely limited  are available to select DATES/TIMES.</p>
+            <p class="milestone__desc">AFTER THE 10 SALES HOSTED ON THE WEBSITE, GIV WILL ONLY BE AVAILABLE TO TRADE ON uniSWAP USING THE TOKEN CONTRACT ADDRESS.</p>
+            <h3 class="milestone__title">inital launch fees</h3><img src="img/img-milestone-2.png" srcset="img/img-milestone-2@2x.png 2x" alt="">
+            <p class="milestone__desc">during the INITIAL 10 launches:</p>
+            <p class="milestone__desc">each sale will include the original transactional fee mentioned in the tokenomics, along with an additional 5% Developers fee.</p>
+            <p class="milestone__desc">the ETH collected from the developer fee will be used to sustain the project throughout launch and help fund future developments for the giving platform.</p>
+            <p class="milestone__desc">After the Launches: the developer fee will terminate and the original Transactional tax will remain.</p>
+            <h3 class="milestone__title">THE givING PLATFORM: <br>after lAUNCH</h3>
+            <p class="milestone__desc">UPON COMPLETION OF THE INITAL sALES:</p>
+            <ul class="milestone__list">
+              <li>THE GIVING PLATFORM WILL BE ACTIVELY UP AND RUNNING</li>
+              <li>GIV’S SOCIAL MEDIA WILL BE THE FOUNDATION WHERE PEOPLE FROM ALL OVER RECOMMEND CHARITIES - WHERE ORGANIZATIONS CAN PROMOTE THEMSELVES</li>
+              <li>THE COMMUNITY WILL BE  ENGAGED IN SCOUTING / RANKING CHARITIES THROUGHOUT THE WORLD</li>
+              <li>THE GIVING POOL WILL HAVE ALREADY DONATED TO OVER A DOZEN CHARITIES AND WILL CONTINUE RECIEVING FUNDS AS PEOPLE TRADE GIV</li>
+              <li>TOKEN HOLDERS WILL CONTINUE RECIEVING REWARDS DIRECTLY DEPOSITED INTO THEIR WALLETS</li>
+              <li>GIVEAWAYS WILL BE HOSTED IN OUR DISCORD</li>
+            </ul>
+            <p class="milestone__desc">the giving team will always strive to bring decentralization to the world of charity.</p>
+            <p class="milestone__desc">by creating a platform ran by our community, giv has created an equal opportunity for charities of all sizes and locations to receive donations and express their story.</p>
+            <p class="milestone__desc">we encourage all to join our community of making a difference .</p>
+            <p class="milestone__desc">we welcome you to the giving platform.</p>
           </div>
         </div>
       </section>
@@ -120,6 +152,7 @@
   <!-- SCRIPT :: START-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js" integrity="sha512-IsNh5E3eYy3tr/JiX2Yx4vsCujtkhwl7SLqgnwLNgf04Hrt9BT9SXlLlZlWx+OK4ndzAoALhsMNcCmkggjZB1w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
   <!--script(src="js/vendor.js")-->
   <script src="js/app.js"></script>
   <!-- SCRIPT :: END-->
